# opennav_docking

./: README.md  humble.ignored
nova_carter_dock/: CMakeLists.txt  README.md  package.xml  plugin.xml
nova_carter_dock/include/nova_carter_dock/: nova_carter_dock.hpp
nova_carter_dock/launch/: demo_setup.launch.py  isaac_apriltag_detection_pipeline.launch.py  nova_carter_robot_and_detector.launch.py
nova_carter_dock/params/: nova_carter_dock.yaml
nova_carter_dock/src/: dock_pose_publisher.cpp  nova_carter_dock.cpp
nova_carter_docking/: CMakeLists.txt  README.md  demo.py  package.xml  plugin.xml
nova_carter_docking/include/nova_carter_docking/: nova_carter_dock.hpp
nova_carter_docking/launch/: demo_setup.launch.py  isaac_apriltag_detection_pipeline.launch.py
nova_carter_docking/params/: nova_carter_docking.yaml
nova_carter_docking/src/: nova_carter_dock.cpp
opennav_docking/: CMakeLists.txt  package.xml  plugins.xml  temp_plugins.xml
opennav_docking/include/opennav_docking/: controller.hpp  dock_database.hpp  docking_server.hpp  graceful_controller.hpp  navigator.hpp  simple_charging_dock.hpp  types.hpp  utils.hpp
opennav_docking/launch/: temp_dock.launch.py  test_docking.py  test_ubr1.launch.py
opennav_docking/src/: controller.cpp  dock_database.cpp  docking_server.cpp  graceful_controller.cpp  navigator.cpp  simple_charging_dock.cpp  temp_charging_dock.cpp
opennav_docking/test/: CMakeLists.txt  test_controller.cpp  test_dock_database.cpp  test_docking_server.py  test_docking_server_unit.cpp  test_navigator.cpp  test_simple_charging_dock.cpp  test_utils.cpp  testing_dock.cpp
opennav_docking_bt/: CMakeLists.txt  package.xml
opennav_docking_bt/behavior_trees/: application_example.xml
opennav_docking_bt/include/opennav_docking_bt/: dock_robot.hpp  undock_robot.hpp
opennav_docking_bt/src/: dock_robot.cpp  undock_robot.cpp
opennav_docking_bt/test/: test_dock_robot.cpp  test_undock_robot.cpp
opennav_docking_core/: CMakeLists.txt  demo.py  package.xml
opennav_docking_core/include/opennav_docking_core/: ChargingDock.hpp  charging_dock.hpp  controller.hpp  docking_exceptions.hpp
opennav_docking_msgs/: CMakeLists.txt  package.xml
opennav_docking_msgs/action/: DockRobot.action  UndockRobot.action
opennav_dynamic_following/: CMakeLists.txt  package.xml
opennav_dynamic_following/include/opennav_dynamic_following/: controller.hpp  following_server.hpp
opennav_dynamic_following/src/: controller.cpp  following_server.cpp  main.cpp
opennav_dynamic_following/test/: CMakeLists.txt  test_controller.cpp  test_following_server_unit.cpp
opennav_following/: CMakeLists.txt  package.xml
opennav_following/include/opennav_following/: following_exceptions.hpp  following_server.hpp
opennav_following/src/: following_server.cpp  main.cpp
opennav_following/test/: CMakeLists.txt  test_following_server.py  test_following_server_unit.cpp
opennav_following_bt/: CMakeLists.txt  package.xml
opennav_following_bt/include/opennav_following_bt/: follow_object.hpp  follow_object_action.hpp  follow_object_cancel_node.hpp
opennav_following_bt/src/: follow_object.cpp  follow_object_action.cpp  follow_object_cancel_node.cpp
opennav_following_bt/test/: CMakeLists.txt  test_follow_object.cpp  test_follow_object_action.cpp
opennav_following_demo/: CMakeLists.txt  README.md  demo.py  package.xml
opennav_following_demo/launch/: setup.launch.py
opennav_following_demo/params/: following_demo.yaml
opennav_following_msgs/action/: FollowObject.action
