<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nova_carter_docking</name>
  <version>0.0.2</version>
  <description>A docking solution and plugin for the Nova Carter robot</description>
  <maintainer email="steve@opennav.org">Steve Macenski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>
  <depend>opennav_docking_core</depend>
  <depend>tf2_ros</depend>
  <depend>isaac_ros_apriltag_interfaces</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <opennav_docking_core plugin="${prefix}/plugin.xml" />
  </export>
</package>
