<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opennav_following_demo</name>
  <version>0.0.0</version>
  <description>Following demo.</description>
  <maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_msgs</depend>
  <depend>opennav_following_msgs</depend>
  <depend>geometry_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
